--- a/src/components/HomeMapas/HomeMapas.css
+++ b/src/components/HomeMapas/HomeMapas.css
@@ -8,12 +8,12 @@
 .HomeContainer {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     padding: 40px;
 }
 
 .HomeContainer h1 {
-    font-size: 5em;
+    font-size: 4em;
     font-weight: bold;
     max-width: 200px;
 }
@@ -26,4 +26,11 @@
     max-width: 400px;
     font-size: 20px;
     color: #919791;
+}
+.imgContainer{
+    width: 90%;
+    height: auto;
+}
+.imgContainer img{
+    width: 100%;
 }
